Fix for weird scrolling on mobile?

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,6 +13,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
     touch-action: manipulation;
     -ms-user-select: none;
         user-select: none;
